# dex-dictate-v3

./: .gitignore  README.md  config.json  dex-dictate.service  dex_daemon.py  dex_focus.py  dex_gui.py  dex_gui_qt.py  history.json  preload_models.py  pyproject.toml  run_daemon.sh  run_forever.sh.bak  run_rescue.sh  setup_env.sh  starsilk.qss  strings.py  test_porcupine.py  verify_system.py  vocabulary.json
gui/: daemon_client.py  dex_bar.py  dialogs.py  main_window.py  panels.py  state.py  telemetry.py  widgets.py
scripts/: generate_beeps.py
tests/: deep_diagnostic.py  diagnostic_test.py  test_daemon.py
