[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-dictate"
version = "3.0.0"
description = "A local, private voice dictation assistant for Linux (Wayland/X11)."
readme = "README.md"
authors = [
  { name = "Andrew Dolby", email = "andrew@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "sounddevice",
    "numpy",
    "pvporcupine",
    "faster-whisper",
    "evdev",
    "pyperclip",
]

[project.urls]
"Homepage" = "https://github.com/westkitty/dex-dictate-v3"
"Bug Tracker" = "https://github.com/westkitty/dex-dictate-v3/issues"

[project.scripts]
dex-gui = "dex_gui_qt:main"
dex-daemon = "dex_daemon:main"

[tool.setuptools.packages.find]
where = ["."]
